# Quant-Python-Engine

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  README.md  README.txt  docker-compose.yml  equity_0.parquet  pyproject.toml  summary.json  trades_0.parquet  trials.parquet
docs/: ARCHITECTURE_MAP.md  FEATURE_CATALOG.md  INTEGRATIONS_ROADMAP.md  PROJECT_OVERVIEW.md  architecture_overview.md  filters.md  getting_started.md  levels_overview.md  market_stats_guidelines.md  seasonality_reference.md
specs/: eurusd_m1_seasonality.json  filters_risk_mgmt_example.json  filters_stat_prob_example.json  filters_structure_ict_example.json  filters_time_seasonality_example.json  filters_volatility_trend_example.json  filters_volume_profile_example.json  levels_example.json  levels_phase15_build.json  levels_phase15_fill.json  levels_phase2a_build.json  levels_phase2b_build.json  stats_levels_examples.json
tests/: test_api_smoke.py  test_backtest_minimal.py  test_cli_smoke.py  test_features.py  test_filters_risk_mgmt_smoke.py  test_filters_stat_prob_smoke.py  test_filters_structure_ict_smoke.py  test_filters_time_seasonality_smoke.py  test_filters_volatility_trend_smoke.py  test_filters_volume_profile_smoke.py  test_levels_db_constraints_smoke.py  test_levels_phase15_smoke.py  test_levels_phase2a_smoke.py  test_levels_phase2b_smoke.py  test_levels_smoke.py  test_mysql_feed_smoke.py  test_persistence_api.py  test_seasonality_profiles_compare.py  test_seasonality_sessions.py  test_seasonality_smoke.py  test_spec.py  test_stats.py  test_stats_api_endpoints.py  (+4 more)
(+80 files in other folders)
