[tool.poetry]
name = "quant-engine"
version = "0.1.0"
description = "Quantitative strategy optimization engine"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
polars = "^0.20.0"
numpy = "^1.26"
numba = "^0.58"
pyarrow = "^14.0.1"
optuna = "^3.5.0"
mlflow = "^2.8.0"
fastapi = "^0.109.0"
pydantic = "^2.5"
typer = "^0.9.0"
sqlalchemy = "^2.0"
alembic = "^1.12"
tenacity = "^8.2"
pymysql = "^1.1"
pydantic-settings = "^2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.1.5"
black = "^23.10.0"
mypy = "^1.7.0"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

